[package]
name = "eftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eftpd"
path = "src/eftpd/eftpd.rs"

[[bin]]
name = "eftp"
path = "src/eftp/eftp.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
